sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:110: error: missing argument list for method deplace in class BaseballEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `deplace _` or `deplace(_,_)` instead of `deplace`.
  deplace
  ^